force-app/main/default/objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <label>Sales Order</label>
    <pluralLabel>Sales Orders</pluralLabel>
    <nameField>
        <label>Sales Order Number</label>
        <displayFormat>SO-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Sales order header capturing order details placed by salesperson during retail visits (MOD-05 Order Management)</description>
</CustomObject>