force-app/main/default/objects/Sales_Order__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <label>Beat</label>
    <type>Lookup</type>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>