force-app/main/default/objects/Sales_Order__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field App</fullName>
                <default>true</default>
                <label>Field App</label>
            </value>
            <value>
                <fullName>Retailer Portal</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>