force-app/main/default/objects/Sales_Order__c/fields/Credit_Checked__c.field-meta.xml
<CustomField>
    <fullName>Credit_Checked__c</fullName>
    <label>Credit Checked</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>