force-app/main/default/objects/Sales_Order__c/fields/Day_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Day_Attendance__c</fullName>
    <label>Day Attendance</label>
    <type>Lookup</type>
    <referenceTo>Day_Attendance__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>