force-app/main/default/objects/Sales_Order__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>