force-app/main/default/objects/Sales_Order__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>