force-app/main/default/objects/Sales_Order__c/fields/Must_Sell_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Must_Sell_Compliance__c</fullName>
    <label>Priority Sell Compliance</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>