force-app/main/default/objects/Sales_Order__c/fields/Must_Sell_Override__c.field-meta.xml
<CustomField>
    <fullName>Must_Sell_Override__c</fullName>
    <label>Priority Sell Override</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>