force-app/main/default/objects/Sales_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>