force-app/main/default/objects/Sales_Order__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Salesperson_Sales_Order_Records</relationshipName>
    <type>Lookup</type>
</CustomField>