force-app/main/default/objects/Sales_Order__c/fields/Scheme_Discount__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Discount__c</fullName>
    <label>Scheme Discount</label>
    <description>Total scheme discount applied to this order</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>