force-app/main/default/objects/Sales_Order__c/fields/Total_Free_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Free_Quantity__c</fullName>
    <label>Total Free Quantity</label>
    <description>Total free product quantity from schemes on this order</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>