force-app/main/default/objects/Sales_Order__c/fields/Total_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Amount__c</fullName>
    <label>Total Net Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>