force-app/main/default/objects/Sales_Order__c/fields/Total_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Reward_Points__c</fullName>
    <label>Total Reward Points</label>
    <description>Total reward points earned from schemes on this order</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>