force-app/main/default/objects/Sales_Order__c/fields/Trade_Channel__c.field-meta.xml
<CustomField>
    <fullName>Trade_Channel__c</fullName>
    <label>Trade Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>The customer trade channel, auto-populated from Account.Channel__c at order creation. Separate from Channel__c which tracks the order entry method.</description>
</CustomField>