force-app/main/default/objects/Sales_Order__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Lookup</type>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source warehouse for stock allocation and dispatch</description>
</CustomField>