force-app/main/default/objects/Sales_Order__c/fields/Warehouse_State__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_State__c</fullName>
    <label>Warehouse State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>