force-app/main/default/objects/Sales_Order__c/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <description>Account is required on all sales orders</description>
    <errorConditionFormula>ISBLANK(Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account is required for a Sales Order.</errorMessage>
</ValidationRule>