force-app/main/default/objects/Sales_Order__c/validationRules/Order_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Date_Required</fullName>
    <active>true</active>
    <description>Order date is required on all sales orders</description>
    <errorConditionFormula>ISBLANK(Order_Date__c)</errorConditionFormula>
    <errorDisplayField>Order_Date__c</errorDisplayField>
    <errorMessage>Order Date is required for a Sales Order.</errorMessage>
</ValidationRule>