force-app/main/default/objects/Sales_Order__c/validationRules/Territory_Required_On_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Territory_Required_On_Submit</fullName>
    <active>true</active>
    <description>Requires Territory to be populated when a Sales Order is submitted or beyond. Territory is critical for pricing resolution, must-sell validation, and reporting.</description>
    <errorConditionFormula>AND(
    ISBLANK(Territory__c),
    NOT(ISPICKVAL(Status__c, &quot;Draft&quot;)),
    NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;))
)</errorConditionFormula>
    <errorDisplayField>Territory__c</errorDisplayField>
    <errorMessage>Territory is required before submitting the order. Please select a Territory.</errorMessage>
</ValidationRule>