force-app/main/default/objects/Sales_Order__c/listViews/All_Orders.listView-meta.xml
<ListView>
    <fullName>All_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Salesperson__c</columns>
    <columns>Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>