force-app/main/default/objects/Sales_Order__c/listViews/My_Orders.listView-meta.xml
<ListView>
    <fullName>My_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Channel__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Orders</label>
</ListView>