force-app/main/default/objects/Sales_Order__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Salesperson__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Pending Approval</label>
</ListView>