force-app/main/default/objects/Sales_Order__c/listViews/Todays_Orders.listView-meta.xml
<ListView>
    <fullName>Todays_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Salesperson__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today's Orders</label>
</ListView>